--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="SourceCodo\Main.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowAssembleBackTitle.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowAssembleBase.cpp" />
+    <ClCompile Include="SourceCodo\MenuWindowAssembleTakeOff.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowBase.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowGameOverBase.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowGameOverContinue.cpp" />
@@ -238,6 +239,7 @@
     <ClInclude Include="SourceCodo\Main.h" />
     <ClInclude Include="SourceCodo\MenuWindowAssembleBackTitle.h" />
     <ClInclude Include="SourceCodo\MenuWindowAssembleBase.h" />
+    <ClInclude Include="SourceCodo\MenuWindowAssembleTakeOff.h" />
     <ClInclude Include="SourceCodo\MenuWindowBase.h" />
     <ClInclude Include="SourceCodo\MenuWindowGameOverBase.h" />
     <ClInclude Include="SourceCodo\MenuWindowGameOverContinue.h" />
