--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -116,7 +116,7 @@
     <ClCompile Include="SourceCodo\Enemy.cpp" />
     <ClCompile Include="SourceCodo\EnemyCharactor.cpp" />
     <ClCompile Include="SourceCodo\EnemyRobo.cpp" />
-    <ClCompile Include="SourceCodo\EnemyRoboStatus.cpp" />
+    <ClCompile Include="SourceCodo\RoboStatusEnemy.cpp" />
     <ClCompile Include="SourceCodo\FactoryCamera.cpp" />
     <ClCompile Include="SourceCodo\FactoryParts.cpp" />
     <ClCompile Include="SourceCodo\FactoryScene.cpp" />
@@ -158,7 +158,7 @@
     <ClCompile Include="SourceCodo\PartsWindowModel.cpp" />
     <ClCompile Include="SourceCodo\PartsWindowModelForArms.cpp" />
     <ClCompile Include="SourceCodo\Player.cpp" />
-    <ClCompile Include="SourceCodo\PlayerRoboStatus.cpp" />
+    <ClCompile Include="SourceCodo\RoboStatusPlayer.cpp" />
     <ClCompile Include="SourceCodo\PtrGroup.cpp" />
     <ClCompile Include="SourceCodo\Ray.cpp" />
     <ClCompile Include="SourceCodo\RenderAtStartUp.cpp" />
@@ -224,7 +224,7 @@
     <ClInclude Include="SourceCodo\Enemy.h" />
     <ClInclude Include="SourceCodo\EnemyCharactor.h" />
     <ClInclude Include="SourceCodo\EnemyRobo.h" />
-    <ClInclude Include="SourceCodo\EnemyRoboStatus.h" />
+    <ClInclude Include="SourceCodo\RoboStatusEnemy.h" />
     <ClInclude Include="SourceCodo\FactoryCamera.h" />
     <ClInclude Include="SourceCodo\FactoryParts.h" />
     <ClInclude Include="SourceCodo\FactoryScene.h" />
@@ -268,7 +268,7 @@
     <ClInclude Include="SourceCodo\PartsWindowModel.h" />
     <ClInclude Include="SourceCodo\PartsWindowModelForArms.h" />
     <ClInclude Include="SourceCodo\Player.h" />
-    <ClInclude Include="SourceCodo\PlayerRoboStatus.h" />
+    <ClInclude Include="SourceCodo\RoboStatusPlayer.h" />
     <ClInclude Include="SourceCodo\PtrGroup.h" />
     <ClInclude Include="SourceCodo\Ray.h" />
     <ClInclude Include="SourceCodo\RenderAtStartUp.h" />
