敵と味方位置データ取得

--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -115,7 +115,9 @@
     <ClCompile Include="SourceCodo\Effects.cpp" />
     <ClCompile Include="SourceCodo\Enemy.cpp" />
     <ClCompile Include="SourceCodo\EnemyCharactor.cpp" />
+    <ClCompile Include="SourceCodo\EnemyFactory.cpp" />
     <ClCompile Include="SourceCodo\EnemyRobo.cpp" />
+    <ClCompile Include="SourceCodo\FriendFactory.cpp" />
     <ClCompile Include="SourceCodo\RoboStatusEnemy.cpp" />
     <ClCompile Include="SourceCodo\FactoryCamera.cpp" />
     <ClCompile Include="SourceCodo\FactoryParts.cpp" />
@@ -224,7 +226,9 @@
     <ClInclude Include="SourceCodo\Effects.h" />
     <ClInclude Include="SourceCodo\Enemy.h" />
     <ClInclude Include="SourceCodo\EnemyCharactor.h" />
+    <ClInclude Include="SourceCodo\EnemyFactory.h" />
     <ClInclude Include="SourceCodo\EnemyRobo.h" />
+    <ClInclude Include="SourceCodo\FriendFactory.h" />
     <ClInclude Include="SourceCodo\RoboStatusEnemy.h" />
     <ClInclude Include="SourceCodo\FactoryCamera.h" />
     <ClInclude Include="SourceCodo\FactoryParts.h" />
