--- a/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj.filters
@@ -91,6 +91,9 @@
     <Filter Include="Tahara\RoboStatus">
       <UniqueIdentifier>{120158e7-95a4-4ad1-a974-3015f672629a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Hiyosi\Friend">
+      <UniqueIdentifier>{3dc9113c-43a3-4afe-a816-5b709c580582}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceCodo\CameraMission.cpp">
@@ -386,6 +389,12 @@
     </ClCompile>
     <ClCompile Include="SourceCodo\ScreenTexture.cpp">
       <Filter>Tahara\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\EnemyFactory.cpp">
+      <Filter>Hiyosi\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCodo\FriendFactory.cpp">
+      <Filter>Hiyosi\Friend</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -700,6 +709,12 @@
     </ClInclude>
     <ClInclude Include="SourceCodo\ScreenTexture.h">
       <Filter>Tahara\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\EnemyFactory.h">
+      <Filter>Hiyosi\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCodo\FriendFactory.h">
+      <Filter>Hiyosi\Friend</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
