ロード中画面クラス作成

--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -131,6 +131,8 @@
     <ClCompile Include="SourceCodo\FriendFactory.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowMissionBase.cpp" />
     <ClCompile Include="SourceCodo\MenuWindowMissionPause.cpp" />
+    <ClCompile Include="SourceCodo\RenderAtLoadTime.cpp" />
+    <ClCompile Include="SourceCodo\RenderSubThreadBase.cpp" />
     <ClCompile Include="SourceCodo\RoboStatusEnemy.cpp" />
     <ClCompile Include="SourceCodo\FactoryCamera.cpp" />
     <ClCompile Include="SourceCodo\FactoryParts.cpp" />
@@ -255,6 +257,8 @@
     <ClInclude Include="SourceCodo\FriendFactory.h" />
     <ClInclude Include="SourceCodo\MenuWindowMissionBase.h" />
     <ClInclude Include="SourceCodo\MenuWindowMissionPause.h" />
+    <ClInclude Include="SourceCodo\RenderAtLoadTime.h" />
+    <ClInclude Include="SourceCodo\RenderSubThreadBase.h" />
     <ClInclude Include="SourceCodo\RoboStatusEnemy.h" />
     <ClInclude Include="SourceCodo\FactoryCamera.h" />
     <ClInclude Include="SourceCodo\FactoryParts.h" />
